--- a/index.html
+++ b/index.html
@@ -2,12 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"><
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Password Generator</title>
 </head>
 <body>
-    
+    <div class="container">
+        <h1>Generate a <br>Random Password</h1>
+        <div class="display">
+            <input type="text" id="Password" placeholder="Password">
+            <img src="">
+        </div>
+    </div>
 
     <script src="script.js"></script>
 </body>
