--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     <div class="container">
-        <h1>Generate a <br>Random Password</h1>
+        <h1>Generate a <br><span>Random Password</span></h1>
         <div class="display">
             <input type="text" id="Password" placeholder="Password">
-            <img src="">
+            <img src="images/copy.png">
         </div>
     </div>
 
