--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <input type="text" id="Password" placeholder="Password">
             <img src="images/copy.png">
         </div>
-     
+        <button><img src="images/wandgenerator.png" style="width: 30px; margin-right: 7px;">Generate Password</button>
     </div>
 
     <script src="script.js"></script>
