Added some random stuff and tweaked things

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <input type="text" id="password" placeholder="password">
             <img src="images/copy.png" onclick="copyPassword()">
         </div>
-        <button onclick="createPassword()"><img src="images/wandgenerator.png" style="width: 30px; margin-right: 7px;">Generate Password</button>
+        <button onclick="createPassword()">Generate Password</button>
     </div>
 
     <script src="script.js"></script>
