TESTING TO SEE A PROBLEM

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
         </div>
         <button onclick="createPassword()">Generate Password</button>
     </div>
-
+    <h1>TESTING</h1>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam, minus!</p>
     <script src="script.js"></script>
 </body>
 </html>
