contact imgs added

--- a/index.html
+++ b/index.html
@@ -15,8 +15,14 @@
         </div>
         <button onclick="createPassword()">Generate Password</button>
     </div>
-    <h1>TESTING</h1>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam, minus!</p>
+   <div class="info-btn">
+  <h1>Connect With Me</h1>
+  <div class="btn-group">
+    <button><img src="github-icon.png">Github</button>
+    <button><img src="portfolio-icon.png">Portfolio</button>
+  </div>
+</div>
+
     <script src="script.js"></script>
 </body>
 </html>
