--- a/index.html
+++ b/index.html
@@ -15,11 +15,15 @@
         </div>
         <button onclick="createPassword()">Generate Password</button>
     </div>
-   <div class="info-btn">
+ <div class="info-btn">
   <h1>Connect With Me</h1>
   <div class="btn-group">
-    <button><img src="github-icon.png">Github</button>
-    <button><img src="portfolio-icon.png">Portfolio</button>
+    <a href="https://github.com/E-rwinn" target="_blank" class="link-btn">
+      <img src="images/github.png">Github
+    </a>
+    <a href="https://erwins-portfolio.vercel.app/" target="_blank" class="link-btn">
+      <img src="images/portfolio.png">Portfolio
+    </a>
   </div>
 </div>
 
