New btn imgs and new box layout

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="images/lockLogo.png" type="image/x-icon">
     <title>Password Generator</title>
 </head>
 <body>
@@ -16,13 +17,12 @@
         <button onclick="createPassword()">Generate Password</button>
     </div>
  <div class="info-btn">
-  <h1>Connect With Me</h1>
   <div class="btn-group">
     <a href="https://github.com/E-rwinn" target="_blank" class="link-btn">
-      <img src="images/github.png">Github
+      <img src="images/github.png">
     </a>
     <a href="https://erwins-portfolio.vercel.app/" target="_blank" class="link-btn">
-      <img src="images/portfolio.png">Portfolio
+      <img src="portfolio-images/workPort.png">
     </a>
   </div>
 </div>
